[gd_scene load_steps=51 format=3 uid="uid://b3x168mtsjgq3"]

[ext_resource type="Texture2D" uid="uid://c4ehevte6h1m8" path="res://Assets/Sprites/Other/LabelSpriteSheet2.png" id="1_l1wg4"]
[ext_resource type="Script" uid="uid://c48arewkmfpw8" path="res://Scripts/buttons_menu.gd" id="1_r5apd"]
[ext_resource type="Texture2D" uid="uid://cij31lkh2d2e" path="res://Assets/Sprites/Other/IconsSpriteSheet2.png" id="2_inh3s"]
[ext_resource type="Texture2D" uid="uid://py1kvbnxnso5" path="res://Assets/Sprites/Other/IconsSpriteSheet.png" id="3_m6e8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uj0ok"]
atlas = ExtResource("1_l1wg4")
region = Rect2(187.59393, 134.62088, 2023.8945, 584.6162)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqe32"]
atlas = ExtResource("2_inh3s")
region = Rect2(23.38804, 27.414598, 764.5516, 762.3943)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qfavn"]
texture = SubResource("AtlasTexture_tqe32")

[sub_resource type="AtlasTexture" id="AtlasTexture_syw6n"]
atlas = ExtResource("2_inh3s")
region = Rect2(1690.8914, 28.2644, 762.75415, 762.3701)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cvaji"]
texture = SubResource("AtlasTexture_syw6n")

[sub_resource type="AtlasTexture" id="AtlasTexture_1ndqe"]
atlas = ExtResource("2_inh3s")
region = Rect2(855.23016, 27.348537, 762.71796, 761.35376)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rf7jh"]
texture = SubResource("AtlasTexture_1ndqe")

[sub_resource type="AtlasTexture" id="AtlasTexture_wbndg"]
atlas = ExtResource("2_inh3s")
region = Rect2(23.3619, 29.031023, 763.28436, 761.6044)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uyb61"]
texture = SubResource("AtlasTexture_wbndg")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_064ll"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a6r4q"]
atlas = ExtResource("2_inh3s")
region = Rect2(22.128515, 859.2652, 763.26685, 762.59845)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_838ek"]
texture = SubResource("AtlasTexture_a6r4q")

[sub_resource type="AtlasTexture" id="AtlasTexture_gesnm"]
atlas = ExtResource("2_inh3s")
region = Rect2(1689.5165, 859.16315, 763.026, 762.56854)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bopkt"]
texture = SubResource("AtlasTexture_gesnm")

[sub_resource type="AtlasTexture" id="AtlasTexture_xe16v"]
atlas = ExtResource("2_inh3s")
region = Rect2(854.7979, 857.8794, 762.0197, 761.3146)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1dcvo"]
texture = SubResource("AtlasTexture_xe16v")

[sub_resource type="AtlasTexture" id="AtlasTexture_xnjvu"]
atlas = ExtResource("2_inh3s")
region = Rect2(22.229057, 859.86707, 762.8807, 761.91394)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i7kjx"]
texture = SubResource("AtlasTexture_xnjvu")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sag0e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0gdwa"]
atlas = ExtResource("3_m6e8v")
region = Rect2(24.137817, 859.0775, 763.83655, 761.8395)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1j4vm"]
texture = SubResource("AtlasTexture_0gdwa")

[sub_resource type="AtlasTexture" id="AtlasTexture_oyqd5"]
atlas = ExtResource("3_m6e8v")
region = Rect2(1691.7977, 860.7386, 761.8063, 760.5588)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tse20"]
texture = SubResource("AtlasTexture_oyqd5")

[sub_resource type="AtlasTexture" id="AtlasTexture_x0qhv"]
atlas = ExtResource("3_m6e8v")
region = Rect2(856.64777, 857.3901, 762.99713, 761.8255)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bfgvb"]
texture = SubResource("AtlasTexture_x0qhv")

[sub_resource type="AtlasTexture" id="AtlasTexture_nsbk5"]
atlas = ExtResource("3_m6e8v")
region = Rect2(24.803232, 859.7215, 762.5346, 761.4681)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bvuc7"]
texture = SubResource("AtlasTexture_nsbk5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iw484"]

[sub_resource type="AtlasTexture" id="AtlasTexture_glt6o"]
atlas = ExtResource("3_m6e8v")
region = Rect2(21.402452, 2525.1172, 762.52386, 760.52246)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c05hx"]
texture = SubResource("AtlasTexture_glt6o")

[sub_resource type="AtlasTexture" id="AtlasTexture_j3wqx"]
atlas = ExtResource("3_m6e8v")
region = Rect2(1689.7059, 2524.2046, 763.0123, 759.6753)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fewjm"]
texture = SubResource("AtlasTexture_j3wqx")

[sub_resource type="AtlasTexture" id="AtlasTexture_uen16"]
atlas = ExtResource("3_m6e8v")
region = Rect2(854.96515, 2522.1804, 761.90375, 759.54565)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_opl43"]
texture = SubResource("AtlasTexture_uen16")

[sub_resource type="AtlasTexture" id="AtlasTexture_vl7s3"]
atlas = ExtResource("3_m6e8v")
region = Rect2(21.837252, 2525.9993, 761.80945, 758.9866)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xp826"]
texture = SubResource("AtlasTexture_vl7s3")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ol2go"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r5apd"]
atlas = ExtResource("2_inh3s")
region = Rect2(22.45354, 1692.6423, 763.71405, 761.80176)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kuavi"]
texture = SubResource("AtlasTexture_r5apd")

[sub_resource type="AtlasTexture" id="AtlasTexture_kfseb"]
atlas = ExtResource("2_inh3s")
region = Rect2(1689.3514, 1693.0294, 762.8783, 761.5006)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a18tl"]
texture = SubResource("AtlasTexture_kfseb")

[sub_resource type="AtlasTexture" id="AtlasTexture_udlg6"]
atlas = ExtResource("2_inh3s")
region = Rect2(854.6887, 1690.95, 762.058, 760.57544)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g4j5t"]
texture = SubResource("AtlasTexture_udlg6")

[sub_resource type="AtlasTexture" id="AtlasTexture_c6qaa"]
atlas = ExtResource("2_inh3s")
region = Rect2(22.472862, 1693.3516, 763.31146, 761.5591)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dx6ho"]
texture = SubResource("AtlasTexture_c6qaa")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lxq16"]

[node name="ButtonMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 97.0
offset_bottom = -498.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r5apd")

[node name="Sprite" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 11.0
offset_right = 2190.0
offset_bottom = 595.0
texture = SubResource("AtlasTexture_uj0ok")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 90.0
offset_right = 2113.0
offset_bottom = 518.0

[node name="ClickUpMenu" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_qfavn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cvaji")
theme_override_styles/hover = SubResource("StyleBoxTexture_rf7jh")
theme_override_styles/disabled = SubResource("StyleBoxTexture_uyb61")
theme_override_styles/focus = SubResource("StyleBoxEmpty_064ll")

[node name="DuckUpMenu" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_838ek")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bopkt")
theme_override_styles/hover = SubResource("StyleBoxTexture_1dcvo")
theme_override_styles/disabled = SubResource("StyleBoxTexture_i7kjx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sag0e")

[node name="QuestMenu" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_1j4vm")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tse20")
theme_override_styles/hover = SubResource("StyleBoxTexture_bfgvb")
theme_override_styles/disabled = SubResource("StyleBoxTexture_bvuc7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_iw484")

[node name="OptionsMenu" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_c05hx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fewjm")
theme_override_styles/hover = SubResource("StyleBoxTexture_opl43")
theme_override_styles/disabled = SubResource("StyleBoxTexture_xp826")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ol2go")

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxTexture_kuavi")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a18tl")
theme_override_styles/hover = SubResource("StyleBoxTexture_g4j5t")
theme_override_styles/disabled = SubResource("StyleBoxTexture_dx6ho")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lxq16")

[connection signal="pressed" from="HBoxContainer/ClickUpMenu" to="." method="_on_click_up_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/DuckUpMenu" to="." method="_on_duck_up_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/QuestMenu" to="." method="_on_quest_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/OptionsMenu" to="." method="_on_options_menu_pressed"]
